# webpenetration

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.spaces  README.md  docker-compose.demo.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  database.py  demo.py  events.py  explainer.py  main.py  models.py  orchestrator.py  reports.py  schemas.py
backend/app/adapters/: __init__.py  auth_checks.py  base.py  nikto.py  nuclei.py  owasp.py  schemathesis_adapter.py  semgrep.py  sqlmap.py  zap.py
backend/app/routers/: __init__.py  auth.py  dev.py  reports.py  scans.py  upload.py
backend/tests/: conftest.py  test_auth.py  test_auth_checks.py  test_demo.py  test_dev_routes.py  test_explainer.py  test_health.py  test_models.py  test_nikto_adapter.py  test_nuclei_adapter.py  test_orchestrator.py  test_reports.py  test_scan_ws.py  test_scans_api.py  test_schemas.py  test_schemathesis_adapter.py  test_semgrep_adapter.py  test_sqlmap_adapter.py  test_upload.py  test_zap_adapter.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/src/: App.jsx  App.test.jsx  api.js  index.css  login.test.jsx  main.jsx  scanFlow.test.jsx  theme.js  theme.test.jsx
frontend/src/components/: FindingsList.jsx  FindingsList.test.jsx  Login.jsx  ResultsDashboard.jsx  ResultsDashboard.test.jsx  ScanForm.jsx  ScanForm.test.jsx  ScanProgress.jsx  SeveritySummary.jsx  (+1 more)
